<resources>
    <string name="app_name">CalculationTest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_text">Calculation Test</string>
    <string name="title_button">Enter</string>
    <string name="title_image_info" translatable="false">title_image</string>
    <string name="title_heigh_score_message">Heigh Score:%d</string>

    <string name="button0" translatable="false">0</string>
    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="button_clear">C</string>
    <string name="button_submit">OK</string>

    <string name="equal_symbol" translatable="false">=</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="current_score">Score:%d</string>
    <string name="input_indicator">Your Answer:</string>
    <string name="lose_image_description" translatable="false">loseImage</string>
    <string name="lose_message">You Lose!</string>
    <string name="win_message">You Win!</string>
    <string name="lose_score_message">You Score:%d</string>
    <string name="win_score_message">New Record:%d</string>
    <string name="button_back_to_title">Back</string>
    <string name="win_image_description" translatable="false">win image</string>
    <string name="answer_right_message">Correct!Go On!</string>
    <string name="plase_putin_answer">Plase putin Answer!</string>
    <string name="quit_dialog_title">Are you sure to quit?</string>
    <string name="dialog_positive_message">OK</string>
    <string name="dialog_negative_message">Cancel</string>
    <string name="correct_answer_message">Correct Answer：%d</string>


</resources>
