<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.calculationtest.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_questionFragment"
            app:destination="@id/questionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.example.calculationtest.QuestionFragment"
        android:label="@string/plase_putin_answer"
        tools:layout="@layout/fragment_question">
        <action
            android:id="@+id/action_questionFragment_to_loseFragment"
            app:destination="@id/loseFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.example.calculationtest.WinFragment"
        android:label="@string/win_message"
        tools:layout="@layout/fragment_win">
        <action
            android:id="@+id/action_winFragment_to_titleFragment"
            app:destination="@id/titleFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/loseFragment"
        android:name="com.example.calculationtest.LoseFragment"
        android:label="@string/lose_message"
        tools:layout="@layout/fragment_lost">
        <action
            android:id="@+id/action_loseFragment_to_titleFragment"
            app:destination="@id/titleFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>